[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ordenar_Codigo/Scripts/Ordenar_Codigo.gd" type="Script" id=1]
[ext_resource path="res://Common/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Ordenar_Codigo/Scenes/Respuesta.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ordenar_Codigo/Scenes/Codigo_Ordenado.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ordenar_Codigo/Scenes/Planteamiento_Problema.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.360784, 0.576471, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Empezar"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Planteamiento_Problema:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.815686, 0.815686, 0.815686, 1 ), Color( 0.517647, 0.517647, 0.517647, 1 ), Color( 0.239216, 0.239216, 0.239216, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.3, 1.5, 1.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.211765, 0.211765, 0.211765, 1 ), Color( 0.45098, 0.45098, 0.45098, 1 ), Color( 0.741176, 0.741176, 0.741176, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planteamiento_Problema:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Ordenar_Codigo" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 720.0
margin_bottom = 1440.0

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_right = 720.0
margin_bottom = 1440.0
mouse_filter = 2
color = Color( 0.105882, 0.486275, 0.368627, 1 )

[node name="Panel" type="Panel" parent="UI"]
margin_left = 30.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 1090.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
margin_left = 30.0
margin_top = 30.0
margin_right = 630.0
margin_bottom = 1010.0

[node name="Arriba" type="Button" parent="UI"]
margin_left = 210.0
margin_top = 1110.0
margin_right = 503.0
margin_bottom = 1162.0
custom_fonts/font = SubResource( 2 )
text = "Hacia Arriba"
flat = true

[node name="Abajo" type="Button" parent="UI"]
margin_left = 226.031
margin_top = 1250.82
margin_right = 494.031
margin_bottom = 1302.82
custom_fonts/font = SubResource( 2 )
text = "Hacia Abajo"
flat = true

[node name="Izquierda" type="Button" parent="UI"]
margin_top = 1182.0
margin_right = 368.0
margin_bottom = 1243.0
custom_fonts/font = SubResource( 2 )
text = "Hacia Izquierda"
flat = true

[node name="Derecha" type="Button" parent="UI"]
margin_left = 391.0
margin_top = 1174.0
margin_right = 709.0
margin_bottom = 1242.0
custom_fonts/font = SubResource( 2 )
text = "Hacia Derecha"
flat = true

[node name="Comprobar" type="Button" parent="UI"]
margin_left = 240.0
margin_top = 1342.0
margin_right = 480.0
margin_bottom = 1410.0
custom_fonts/font = SubResource( 2 )
text = "Comprobar"
flat = true

[node name="Respuesta" parent="UI" instance=ExtResource( 3 )]
margin_left = 380.0
margin_top = 550.0
margin_right = 380.0
margin_bottom = 550.0

[node name="Codigo_Ordenado" parent="." instance=ExtResource( 4 )]

[node name="Planteamiento_Problema" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Empezar = SubResource( 3 )
[connection signal="pressed" from="UI/Arriba" to="." method="_on_Arriba_pressed"]
[connection signal="pressed" from="UI/Abajo" to="." method="_on_Abajo_pressed"]
[connection signal="pressed" from="UI/Izquierda" to="." method="_on_Izquierda_pressed"]
[connection signal="pressed" from="UI/Derecha" to="." method="_on_Derecha_pressed"]
[connection signal="pressed" from="UI/Comprobar" to="." method="_on_Comprobar_pressed"]
[connection signal="empezar" from="Planteamiento_Problema" to="." method="_on_Planteamiento_Problema_empezar"]
